updates companion apps links #8

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,7 +21,10 @@
 <h2 id="companion-apps">Companion Apps</h2>
 <ul>
   <li>
-    <a href="https://github.com/oddpawsx/walltaker-go-client/releases/latest">OddPawsX's walltaker-go-client</a> (Windows/Mac/Linux)
+    <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest">Desktop Client</a> (Windows/Mac/Linux)
+  </li>
+  <li>
+    <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest">Android Client</a> (Windows/Mac/Linux)
   </li>
 </ul>
 
