Adding android version minimum to client list

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -24,7 +24,7 @@
     <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest">Desktop Client</a> (Windows/Mac/Linux)
   </li>
   <li>
-    <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest">Android Client</a> (Windows/Mac/Linux)
+    <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest">Android Client</a> (Android 12+)
   </li>
 </ul>
 
