--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,21 +23,23 @@
     <h1><a href="/">Walltaker</a></h1>
     <div class="user-tools">
       <% if current_user %>
-        <span><%= current_user.username %></span>
+        <a class="username" href="<%= user_path current_user.username %>">
+          <%= current_user.username %>
+        </a>
         <a href="<%= url_for :action => :browse, :controller => :links %>">
           <ion-icon name="sparkles"></ion-icon>
           Browse
         </a>
         <%= link_to 'Links', links_path %>
         <%= link_to 'Friends', friendships_path, class: has_requests? ? 'pinged' : '' %>
-        <%= link_to 'Log Out', logout_path %>
+        <%= link_to 'Logout', logout_path %>
       <% else %>
         <a href="<%= url_for :action => :browse, :controller => :links %>">
           <ion-icon name="sparkles"></ion-icon>
           Browse
         </a>
         <%= link_to 'Sign Up', signup_path %>
-        <%= link_to 'Log In', login_path %>
+        <%= link_to 'Login', login_path %>
       <% end %>
     </div>
   </div>
