--- a/public/base.css
+++ b/public/base.css
@@ -103,6 +103,12 @@ h2 {
     margin-top: 3.25rem;
 }
 
+h2 > .online {
+    font-size: 1rem;
+    transform: translateY(-0.9rem);
+    display: inline-block;
+}
+
 h2 ion-icon {
     transform: translateY(0.05em);
     font-size: 0.8em;
