WT-T-16 18+ warning, shoudl've added this before

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,7 +4,8 @@
 
 <h2>What is it?</h2>
 <p>
-  Walltaker is inspired by the <a href="https://www.wallclaimer.com/">WallClaimer</a> app, which allows you to set the
+  First off: <strong>Walltaker is an app built by adults, for adults. You must be over the age of 18 to use it.</strong> Walltaker is
+  inspired by the <a href="https://www.wallclaimer.com/">WallClaimer</a> app, which allows you to set the
   wallpaper of your friends phones. This however leads to some weird cases where people post stuff that'd be on your
   metaphorical blacklist. With that in mind, I wanted it to be restricted to <a href="https://e621.net">e621.net</a>
   results, with an enforced blacklist. This keeps you in control, but not <em>too much</em> control.
@@ -12,9 +13,11 @@
 
 <h2>What do I need?</h2>
 <p>
-  Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an account, you can generate
+  Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an account, you
+  can generate
   links to send to friends/enemies, which will enqueue new wallpapers for your account. When you want to start seeing
-  these new wallpapers, <strong>then you can download the companion apps listed below</strong> which is able to listen to wallpaper changes to any
+  these new wallpapers, <strong>then you can download the companion apps listed below</strong> which is able to listen
+  to wallpaper changes to any
   account. Enter your username, and then go about your day!
 </p>
 
