WT-T-16 Much improved mobile layout

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -3,14 +3,11 @@
     <% if action_name == 'requests' %>
       <%= link_to "Back to friends", url_for(action: :index, controller: :friendships) %>
     <% end %>
-    <% if action_name == 'index' %>
-      <%= link_to "Back to dashboard", root_path %>
-    <% end %>
   </div>
   <div class="right">
     <% if action_name == 'index' %>
       <% if has_requests? %>
-        <span>You have pending requests <ion-icon name="arrow-forward-outline"></ion-icon></span>
+        <span class="notice-right">New Requests <ion-icon name="arrow-forward-outline"></ion-icon></span>
       <% end %>
       <%= button_to "Check Requests", url_for(action: :requests, controller: :friendships), method: :get %>
     <% end %>
