--- a/public/base.css
+++ b/public/base.css
@@ -20,6 +20,14 @@ h1 > a:hover {
     color: var(--bg) !important;
 }
 
+header h1 .show-desktop {
+    display: inline;
+}
+
+header h1 .show-mobile {
+    display: none;
+}
+
 body {
     font-size: 0.9rem;
 }
@@ -184,6 +192,7 @@ p {
     align-items: center;
     gap: 1.5rem;
 }
+
 .task-tools .left {
     flex: 1 0 auto;
 }
@@ -206,6 +215,16 @@ p {
 
 .task-tools button {
     padding: 4px 13px;
+}
+
+.task-tools .notice-right {
+    animation: bounce-right 2s infinite;
+}
+
+@keyframes bounce-right {
+    0%, 20%, 50%, 80%, 100% {transform: translateX(0);}
+    40% {transform: translateX(8%);}
+    60% {transform: translateX(4%);}
 }
 
 .mock-button {
@@ -317,5 +336,68 @@ label ion-icon {
 @media screen and (min-width: 590px) {
     header h1 a {
         margin-right: 1rem;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    header .user-tools > * + * {
+        margin-left: 12px;
+    }
+
+    header h1 {
+        font-size: 1.5rem;
+        margin: 0.5rem auto !important;
+    }
+
+    header h1 > a {
+        padding: 0 6px !important;
+    }
+
+    header .user-tools ion-icon {
+        display: none;
+    }
+
+    header .header__inner {
+        padding: 0 0.5rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header .user-tools > * + * {
+        margin-left: 16px;
+    }
+
+    header .header__inner {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    header h1 {
+        flex: 0 1 auto;
+    }
+
+    header h1 a {
+        padding: 0 9px;
+    }
+
+    header h1 .show-desktop {
+        display: none;
+    }
+
+    header h1 .show-mobile {
+        display: inline;
+    }
+
+    header .user-tools {
+        flex: 1 1 auto;
+        padding: 8px 0;
+    }
+
+    .task-tools .right {
+        gap: 0.9rem;
+    }
+
+    .task-tools button {
+        padding: 4px 8px;
     }
 }
