WT-T-16 filled friendship :)

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <h2>
-  <ion-icon name="boat-outline" class="big"></ion-icon>
+  <ion-icon name="boat" class="big"></ion-icon>
   <%= action_name == 'requests' ? 'Your Requests' : 'Your Friendships' %>
 </h2>
 
