--- a/public/link.css
+++ b/public/link.css
@@ -67,10 +67,36 @@ strong.offline {
     grid-area: terms;
 }
 
-.link--friends-only {
+.link--status-bar {
     grid-area: friends-only;
-    text-align: right;
-    font-size: 1.7rem;
     height: 2rem;
     padding-bottom: 0.3rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.link--device-in-use {
+    color: var(--border);
+    flex: 1 1 100%;
+    display: flex;
+    align-items: center;
+}
+
+.link--device-in-use ion-icon {
+    font-size: 1.3rem;
+    margin-left: 0.5rem;
+}
+
+.link--friends-only {
+    align-self: flex-start;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.link--friends-only ion-icon {
+    margin-right: 0.5rem;
+    font-size: 1.7rem;
 }
