--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -48,9 +48,9 @@
     <div class="link--device-in-use">
       <% case link_agent_to_icon link.last_ping_user_agent %>
       <% when :desktop %>
-        Desktop <ion-icon name="laptop-outline"></ion-icon>
+        Pawcorp Desktop <ion-icon name="laptop-outline"></ion-icon>
       <% when :android %>
-        Android<ion-icon name="phone-portrait-outline"></ion-icon>
+        Pawcorp Android <ion-icon name="phone-portrait-outline"></ion-icon>
       <% when :unknown %>
         <ion-icon name="help-circle-outline"></ion-icon>
       <% end %>
