--- a/public/link.css
+++ b/public/link.css
@@ -70,16 +70,19 @@ strong.offline {
 .link--status-bar {
     grid-area: friends-only;
     height: 2rem;
-    padding-bottom: 0.3rem;
+    padding: 0.3rem 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: flex-end;
 }
 
+.link--status-bar > * {
+    flex: 1 1 100%;
+}
+
 .link--device-in-use {
     color: var(--border);
-    flex: 1 1 100%;
     display: flex;
     align-items: center;
 }
