support joihow user agent

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -57,6 +57,9 @@
       <% when :android %>
         Pawcorp Android
         <ion-icon name="phone-portrait-outline"></ion-icon>
+      <% when :joihow %>
+        JOI.how
+        <ion-icon name="earth-outline"></ion-icon>
       <% when :unknown %>
         <ion-icon name="help-circle-outline"></ion-icon>
       <% end %>
