total number of links on dashboard lol

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="masthead">
-  <h3>A drunk dog project</h3>
+  <h3><%= @online_links_count %> online links</h3>
 </div>
 
 <h2>What is it?</h2>
@@ -24,10 +24,13 @@
 <h2 id="companion-apps">Companion Apps</h2>
 <ul>
   <li>
-    <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest">Desktop Client</a> (Windows/Mac/Linux)
+    <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank">Desktop Client</a> (Windows/Mac/Linux)
   </li>
   <li>
-    <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest">Android Client</a> (Android 12+)
+    <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank">Android Client</a> (Android 12+)
+  </li>
+  <li>
+    <a href="http://joi.how/" target="_blank">JOI.how</a> (Web-based)
   </li>
 </ul>
 
