--- a/public/link.css
+++ b/public/link.css
@@ -123,6 +123,26 @@ strong.offline {
     font-size: 1.7rem;
 }
 
+.link--flashes {
+    text-align: center;
+}
+
+.link--flashes .flash--danger,
+.link--flashes .flash--success {
+    display: inline-block;
+    padding: 0.3rem 0.7rem;
+}
+
+.link--flashes .flash--danger {
+    background: var(--danger);
+    color: #dcdcdc;
+}
+
+.link--flashes .flash--success {
+    background: var(--bg-accent);
+    border: solid 1px var(--success);
+}
+
 /** Forms */
 
 .link--form--checkbox-row {
