Added name to link

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -59,6 +59,8 @@
         </abbr>
       <% end %>
 
+      <em><%= link.user.username %></em>
+
       <div class="link--device-in-use">
         <% case link_agent_to_icon link.last_ping_user_agent %>
         <% when :desktop %>
