update client display names

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -64,10 +64,10 @@
       <div class="link--device-in-use">
         <% case link_agent_to_icon link.last_ping_user_agent %>
         <% when :desktop %>
-          Pawcorp Desktop
+          Walltaker Desktop
           <ion-icon name="laptop-outline"></ion-icon>
         <% when :android %>
-          Pawcorp Android
+          Walltaker Android
           <ion-icon name="phone-portrait-outline"></ion-icon>
         <% when :joihow %>
           JOI.how
