--- a/public/base.css
+++ b/public/base.css
@@ -111,6 +111,16 @@ h2 {
     margin-top: 3.25rem;
 }
 
+h2 span.beta-tag {
+    background: var(--danger);
+    padding: 0.25rem 0.4rem 0.3rem;
+    color: #FFF;
+    font-size: 0.8rem;
+    transform: translateY(-1.1rem);
+    display: inline-block;
+    border-radius: 0.3rem;
+}
+
 h2 > .online {
     font-size: 1rem;
     transform: translateY(-0.9rem);
