--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
   <meta name="rating" content="adult" />
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-  <link rel="stylesheet" href="/base.css?x=9837456"/>
-  <link rel="stylesheet" href="/link.css?x=9837456"/>
-  <link rel="stylesheet" href="/user-profile.css"/>
+  <link rel="stylesheet" href="/base.css?x=5678"/>
+  <link rel="stylesheet" href="/link.css?x=6789"/>
+  <link rel="stylesheet" href="/dashboard.css?x=3546"/>
+  <link rel="stylesheet" href="/user-profile.css?x=3245"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/dark.css">
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
